# aftermarkethunter

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-07-pagination-cebula-progress.md
docs/superpowers/specs/: 2026-04-07-pagination-cebula-progress-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  http.rs  lib.rs  main.rs  model.rs  pipeline.rs  rate_limit.rs  scoring.rs  storage.rs
src-tauri/src/enrichers/: blacklist.rs  dns_quality.rs  linguistic.rs  mod.rs  openpagerank.rs  similarweb.rs  tld_value.rs  trademark.rs  wayback.rs  whois.rs
src-tauri/src/scrapers/: aftermarket_pl.rs  dropped_pl.rs  mod.rs  premium_pl.rs
src-tauri/tests/fixtures/: aftermarket_pl_search.html
src/components/: CebulaDeals.tsx  Countdown.tsx  ProgressBar.tsx  ResultsTable.tsx  ScoreBadge.tsx  ScoreBreakdown.tsx  SearchBar.tsx
src/lib/: ipc.ts  types.ts
src/routes/: Hunt.tsx  SavedSearches.tsx  Settings.tsx  Watchlist.tsx
src/styles/: globals.css
