[package]
name = "aftermarket-hunter"
version = "0.1.0"
description = "Hunt profitable expiring domains on Polish aftermarket sites"
authors = ["you"]
edition = "2021"

[lib]
name = "aftermarket_hunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP + scraping
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"], default-features = false }
scraper = "0.20"
url = "2"
robotstxt = "0.3"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
strsim = "0.11"
regex = "1"
once_cell = "1"
governor = "0.7"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
